# C-Film-Veritaban-projesi

./: README.md
untitled6/: CMakeLists.txt  dosya_Islemleri.h  dosyadanOku.h  dosyayaYaz.h  filmAra.h  filmDu╠êzenle.h  filmEkle.h  filmIslemleri.h  filmKontrol.h  filmListele.h  filmSil.h  filmYilaGoreListele.h  ismeGo╠êreA_Z.h  ismeGo╠êreZ-A.h  main.c  tureGoreAra.h  veritabani.h  veritabaniOlusturma.h  yilaGoreB-K.h  yilaGoreK-B.h  yo╠ênetmeneGo╠êreListele.h
